tables crafting simplify

--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/tables.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/tables.yml
@@ -68,9 +68,6 @@
   - type: Icon
     sprite: _CP14/Structures/Furniture/Tables/wood.rsi
     state: frame
-  - type: Construction
-    graph: CP14TableWooden
-    node: CP14TableWoodenFrame
 
 - type: entity
   parent: CP14WoodenTableBase
@@ -103,6 +100,9 @@
   - type: Icon
     sprite: _CP14/Structures/Furniture/Tables/wood.rsi
     state: round
+  - type: Construction
+    graph: CP14TableWoodenRound
+    node: CP14TableWoodenRound
 
 - type: entity
   parent: CP14TableWooden
@@ -114,3 +114,6 @@
   - type: Icon
     sprite: _CP14/Structures/Furniture/Tables/wood_counter.rsi
     state: full
+  - type: Construction
+    graph: CP14TableWoodenCounter
+    node: CP14TableWoodenCounter
