--- a/Resources/Prototypes/_CP14/Recipes/Construction/furniture.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Construction/furniture.yml
@@ -36,6 +36,42 @@
 
 - type: construction
   crystallPunkAllowed: true
+  name: Wooden table (round)
+  description: A simple table made of boards.
+  id: CP14TableWoodenRound
+  graph: CP14TableWoodenRound
+  startNode: start
+  targetNode: CP14TableWoodenRound
+  category: construction-category-furniture
+  icon:
+    sprite: _CP14/Structures/Furniture/Tables/wood.rsi
+    state: round
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
+
+- type: construction
+  crystallPunkAllowed: true
+  name: Wooden counter
+  description: A simple table made of boards.
+  id: CP14TableWoodenCounter
+  graph: CP14TableWoodenCounter
+  startNode: start
+  targetNode: CP14TableWoodenCounter
+  category: construction-category-furniture
+  icon:
+    sprite: _CP14/Structures/Furniture/Tables/wood_counter.rsi
+    state: full
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
+
+- type: construction
+  crystallPunkAllowed: true
   name: Bonfire
   description: A pile of logs stacked together, ready to burst into flames at the slightest spark.
   id: CP14Bonfire
@@ -95,13 +131,49 @@
   name: Workbench
   description: Table for the production of various basic tools.
   id: CP14Workbench
-  graph: CP14TableWooden
+  graph: CP14Workbench
   startNode: start
   targetNode: CP14Workbench
   category: construction-category-furniture
   icon:
     sprite: _CP14/Structures/Furniture/workbench.rsi
     state: workbench
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
+
+- type: construction
+  crystallPunkAllowed: true
+  name: Cooking table
+  description: A table to work with food. Time to cook!
+  id: CP14WorkbenchCooking
+  graph: CP14WorkbenchCooking
+  startNode: start
+  targetNode: CP14WorkbenchCooking
+  category: construction-category-furniture
+  icon:
+    sprite: _CP14/Structures/Furniture/workbench.rsi
+    state: cooking_table
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
+
+- type: construction
+  crystallPunkAllowed: true
+  name: Sewing table
+  description: A table with embroidery tools to create different clothing and materials.
+  id: CP14WorkbenchSewing
+  graph: CP14WorkbenchSewing
+  startNode: start
+  targetNode: CP14WorkbenchSewing
+  category: construction-category-furniture
+  icon:
+    sprite: _CP14/Structures/Furniture/workbench.rsi
+    state: sewing_table
   objectType: Structure
   placementMode: SnapgridCenter
   canBuildInImpassable: false
