--- a/Resources/Prototypes/_CP14/Entities/Objects/Bureaucracy/paper.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Bureaucracy/paper.yml
@@ -56,6 +56,9 @@
         reagents:
         - ReagentId: Fiber
           Quantity: 1
+  - type: Tag
+    tags:
+    - Document
 
 - type: entity
   parent: CP14BasePaper
