--- a/Resources/Prototypes/_CP14/Entities/Structures/Walls/walls.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Walls/walls.yml
@@ -63,6 +63,7 @@
     sprite: _CP14/Structures/Walls/whitebricks_stone_wall.rsi
   - type: IconSmooth
     base: stonebricks
+  - type: CP14WallpaperHolder
 
 - type: entity
   id: CP14WallBrownbrick
