--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -75,7 +75,7 @@ CP14WoodenDoorTavernDorms5: CP14WoodenDoorTavernDorms
 CP14WoodenDoorTavernAlchemyLocked: CP14WoodenDoorTavernAlchemy
 
 #2024-09-24
-CP14WallpaperPink30: CP14WallpaperPurple30
+CP14WallpaperPink30: CP14WallpaperPurple
 
 #2024-09-25
 CP14IronGrilleStraight: CP14FenceIronGrilleStraight
