--- a/Resources/Prototypes/_CP14/Entities/Body/Parts/human.yml
+++ b/Resources/Prototypes/_CP14/Entities/Body/Parts/human.yml
@@ -2,6 +2,7 @@
 - type: entity
   id: CP14TorsoHuman
   parent: TorsoHuman
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     sprite: _CP14/Mobs/Species/Human/parts.rsi
@@ -10,6 +11,7 @@
 - type: entity
   id: CP14HeadHuman
   parent: HeadHuman
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     sprite: _CP14/Mobs/Species/Human/parts.rsi
@@ -18,6 +20,7 @@
 - type: entity
   id: CP14LeftArmHuman
   parent: LeftArmHuman
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     sprite: _CP14/Mobs/Species/Human/parts.rsi
@@ -25,6 +28,7 @@
 - type: entity
   id: CP14RightArmHuman
   parent: RightArmHuman
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     sprite: _CP14/Mobs/Species/Human/parts.rsi
@@ -32,6 +36,7 @@
 - type: entity
   id: CP14LeftHandHuman
   parent: LeftHandHuman
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     sprite: _CP14/Mobs/Species/Human/parts.rsi
@@ -39,6 +44,7 @@
 - type: entity
   id: CP14RightHandHuman
   parent: RightHandHuman
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     sprite: _CP14/Mobs/Species/Human/parts.rsi
@@ -46,6 +52,7 @@
 - type: entity
   id: CP14LeftLegHuman
   parent: LeftLegHuman
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     sprite: _CP14/Mobs/Species/Human/parts.rsi
@@ -53,6 +60,7 @@
 - type: entity
   id: CP14RightLegHuman
   parent: RightLegHuman
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     sprite: _CP14/Mobs/Species/Human/parts.rsi
@@ -60,6 +68,7 @@
 - type: entity
   id: CP14LeftFootHuman
   parent: LeftFootHuman
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     sprite: _CP14/Mobs/Species/Human/parts.rsi
@@ -67,6 +76,7 @@
 - type: entity
   id: CP14RightFootHuman
   parent: RightFootHuman
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     sprite: _CP14/Mobs/Species/Human/parts.rsi
