--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/flash_light.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/flash_light.yml
@@ -56,6 +56,7 @@
 
 - type: entity
   id: CP14SpawnEffectFlashLight
+  categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
     sprite: /Textures/Objects/Fun/goldbikehorn.rsi
