--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/grasshighbush.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/grasshighbush.yml
@@ -48,7 +48,6 @@
         - FullTileMask 
         layer:
         - Opaque
-        
   - type: Damageable
     damageContainer: Inorganic
     damageModifierSet: Wood
@@ -98,6 +97,7 @@
   id: CP14RandomBushOffsetSpawner
   name: random bush offset spawner
   parent: MarkerBase
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     layers:
