--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -111,6 +111,10 @@ CP14WallpaperPurple30: CP14WallpaperPurple
 CP14WallpaperGreen1: CP14WallpaperGreen
 CP14WallpaperGreen30: CP14WallpaperGreen
 
+#2024-10-18
+CP14WoodenCupboard: CP14WoodenCloset
+CP14VialSmallChromiumSlime: CP14VialTinyChromiumSlime
+CP14VialSmallLumiMushroom: CP14VialTinyLumiMushroom
 
 # <---> CrystallPunk migration zone end
 
