--- a/Resources/Prototypes/_CP14/Catalog/Fills/dresser.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/dresser.yml
@@ -6,9 +6,12 @@
   - type: StorageFill
     contents:
       - id: CP14ClothingEyesAlchemyGlasses
+        prob: 0.5
+      - id: CP14ClothingEyesAlchemyMonocle
+        prob: 0.2
       - id: CP14ClothingCloakAlchemist
-        prob: 0.75
+        prob: 0.6
       - id: CP14ClothingHeadAlchemistBeret
-        prob: 0.75
+        prob: 0.6
       - id: CP14ClothingHeadAlchemistBandana
-        prob: 0.75
+        prob: 0.6
