coin disappear works

--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/Gatherable/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/Gatherable/base.yml
@@ -6,7 +6,7 @@
   components:
   - type: Sprite
     snapCardinals: true
-    drawdepth: LowFloors
+    drawdepth: FloorTiles
   - type: Transform
     anchored: true
   - type: Physics
