--- a/Resources/Prototypes/_CP14/Entities/Structures/Specific/Farming/soil.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Specific/Farming/soil.yml
@@ -50,7 +50,7 @@
     key: walls
     mode: NoSprite
   - type: Sprite
-    drawdepth: FloorTiles
+    drawdepth: BelowFloor
     sprite: _CP14/Structures/Specific/Farming/seedbed.rsi
     layers:
       - state: seedbed_default
