--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/Gatherable/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/Gatherable/base.yml
@@ -6,6 +6,7 @@
   components:
   - type: Sprite
     snapCardinals: true
+    drawdepth: FloorTiles
   - type: Transform
     anchored: true
   - type: Physics
