add common objectives

--- a/Resources/Prototypes/_CP14/game_presets.yml
+++ b/Resources/Prototypes/_CP14/game_presets.yml
@@ -28,4 +28,4 @@
   showInVote: true # For playtest period only
   rules:
     - Sandbox
-    - CP14PersonalObjectivesRule
+    - CP14RoundObjectivesRule
