--- a/Resources/Prototypes/_CP14/GameRules/roundstart.yml
+++ b/Resources/Prototypes/_CP14/GameRules/roundstart.yml
@@ -8,7 +8,7 @@
   - type: CP14RoundSeed
 
 - type: entity
-  id: CP14PersonalObjectivesRule
+  id: CP14RoundObjectivesRule
   parent: CP14BaseGameRule
   categories: [ HideSpawnMenu ]
   components:
@@ -18,8 +18,8 @@
       - CP14PersonalCurrencyCollectObjectiveGroup
   - type: CP14CommonObjectivesRule
     departmentObjectives:
-      CP14Command:
-      - CP14TownSendObjectiveGroup
+      #CP14Command:
+      #- CP14TownSendObjectiveGroup
       CP14Mercenary:
       - CP14TownSendObjectiveGroup #DEBUG
     
