--- a/Resources/Prototypes/_CP14/Roles/Jobs/Command/captain.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Command/captain.yml
@@ -9,6 +9,7 @@
   joinNotifyCrew: true
   canBeAntag: false
   supervisors: cp14-job-supervisors-command
+  weight: 10
 
 - type: startingGear
   id: CP14CaptainGear
