--- a/Resources/Prototypes/_CP14/Roles/play_time_tracker.yml
+++ b/Resources/Prototypes/_CP14/Roles/play_time_tracker.yml
@@ -16,4 +16,7 @@
   id: CP14JobGuardCommander
 
 - type: playTimeTracker
-  id: CP14JobHouseKeeper
+  id: CP14JobQuartermaster
+
+- type: playTimeTracker
+  id: CP14JobMerchant
