--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -116,6 +116,9 @@ CP14WoodenCupboard: CP14WoodenCloset
 CP14VialSmallChromiumSlime: CP14VialTinyChromiumSlime
 CP14VialSmallLumiMushroom: CP14VialTinyLumiMushroom
 
+#2024-10-20
+CP14SpawnPointHouseKeeper: CP14SpawnPointQuartermaster
+
 # <---> CrystallPunk migration zone end
 
 
