job spawner icons

--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/jobs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/jobs.yml
@@ -2,48 +2,13 @@
   id: CP14SpawnPointJobBase
   parent: SpawnPointJobBase
   categories: [ ForkFiltered ]
-
-- type: entity
-  id: CP14SpawnPointAdventurer
-  parent: CP14SpawnPointJobBase
-  name: adventurer
-  categories:
-  - Spawner
   components:
-  - type: SpawnPoint
-    job_id: CP14Adventurer
   - type: Sprite
-    layers:
-      - state: green
-      - state: zookeeper #TODO Replace
+    sprite: _CP14/Markers/jobs.rsi
+    snapCardinals: true
+    
 
-- type: entity
-  id: CP14SpawnPointAlchemist
-  parent: CP14SpawnPointJobBase
-  name: alchemist
-  categories:
-  - Spawner
-  components:
-  - type: SpawnPoint
-    job_id: CP14Alchemist
-  - type: Sprite
-    layers:
-      - state: green
-      - state: zookeeper #TODO Replace
-
-- type: entity
-  id: CP14SpawnPointInnkeeper
-  parent: CP14SpawnPointJobBase
-  name: innkeeper
-  categories:
-  - Spawner
-  components:
-  - type: SpawnPoint
-    job_id: CP14Innkeeper
-  - type: Sprite
-    layers:
-      - state: green
-      - state: zookeeper #TODO Replace
+# Command
 
 - type: entity
   id: CP14SpawnPointCaptain
@@ -57,7 +22,9 @@
   - type: Sprite
     layers:
       - state: green
-      - state: zookeeper #TODO Replace
+      - state: workman #TODO Replace
+      
+# Security
 
 - type: entity
   id: CP14SpawnPointGuardCommander
@@ -71,7 +38,9 @@
   - type: Sprite
     layers:
       - state: green
-      - state: zookeeper #TODO Replace
+      - state: workman #TODO Replace
+
+# Bank
 
 - type: entity
   id: CP14SpawnPointQuartermaster
@@ -85,4 +54,62 @@
   - type: Sprite
     layers:
       - state: green
-      - state: zookeeper #TODO Replace
+      - state: workman #TODO Replace
+
+- type: entity
+  id: CP14SpawnPointMerchant
+  parent: CP14SpawnPointJobBase
+  name: merchant
+  categories:
+  - Spawner
+  components:
+  - type: SpawnPoint
+    job_id: CP14Merchant
+  - type: Sprite
+    layers:
+      - state: green
+      - state: workman #TODO Replace
+
+# Mercenary
+
+- type: entity
+  id: CP14SpawnPointAdventurer
+  parent: CP14SpawnPointJobBase
+  name: adventurer
+  categories:
+  - Spawner
+  components:
+  - type: SpawnPoint
+    job_id: CP14Adventurer
+  - type: Sprite
+    layers:
+      - state: green
+      - state: adventurer
+
+- type: entity
+  id: CP14SpawnPointAlchemist
+  parent: CP14SpawnPointJobBase
+  name: alchemist
+  categories:
+  - Spawner
+  components:
+  - type: SpawnPoint
+    job_id: CP14Alchemist
+  - type: Sprite
+    layers:
+      - state: green
+      - state: alchemist
+
+- type: entity
+  id: CP14SpawnPointInnkeeper
+  parent: CP14SpawnPointJobBase
+  name: innkeeper
+  categories:
+  - Spawner
+  components:
+  - type: SpawnPoint
+    job_id: CP14Innkeeper
+  - type: Sprite
+    layers:
+      - state: green
+      - state: workman #TODO Replace
