--- a/Resources/Prototypes/_CP14/GameRules/roundstart.yml
+++ b/Resources/Prototypes/_CP14/GameRules/roundstart.yml
@@ -8,14 +8,16 @@
   - type: CP14RoundSeed
 
 - type: entity
-  id: CP14ResourceHarvesting
+  id: CP14RoundObjectivesRule
   parent: CP14BaseGameRule
   categories: [ HideSpawnMenu ]
   components:
-  - type: CP14ExpeditionObjectivesRule
+  - type: CP14CommonObjectivesRule
     departmentObjectives:
       CP14Command:
-      - CP14ExpeditionCollectObjectiveGroup
+      - CP14TownSendObjectiveGroup
+  - type: CP14PersonalObjectivesRule
+    departmentObjectives:
       CP14Mercenary:
       - CP14PersonalCurrencyCollectObjectiveGroup
-  # antags
+    
